--- a/content.yaml
+++ b/content.yaml
@@ -1,6 +1,6 @@
  # Collection of wikipedia visualizations
 ---
-page_title: "See also"
+page_title: "See, also"
 page_subtitle: >
     A collection of our favorite visualizations built on <a
     href="https://meta.wikimedia.org/wiki/Research:Data">Wikipedia data</a>, curated by <a href="//blog.hatnote.com">Hatnote</a>.
