--- a/content.yaml
+++ b/content.yaml
@@ -7,6 +7,20 @@ page_subtitle: >
 ---
  # Each visualization should include a title, url, image, and description
 ---
+title: Seealsology
+year: 2016
+date_added: 2016-03-26
+url: http://tools.medialab.sciences-po.fr/seealsology/
+image: viz/seealsology_sm.png
+description: >-
+
+    Explore the relationships among Wikipedia articles with a graph of
+    See Also links.
+
+authors: <a href="http://www.densitydesign.org/">Density Design</a> & <a href="http://www.medialab.sciences-po.fr/">Médialab Sciences Po</a>
+data: Wikipedia API
+code: <a href="https://github.com/densitydesign/strumentalia-seealsology">here</a>
+---
 title: Music Genre Popularity Over the Years
 year: 2016
 date_added: 2016-02-26
