--- a/content.yaml
+++ b/content.yaml
@@ -7,6 +7,18 @@ page_subtitle: >
 ---
  # Each visualization should include a title, url, image, and description
 ---
+title: Chronas
+year: 2015
+date_added: 2016-05-07
+url: http://chronas.org/history
+image: viz/chronas_sm.png
+description: >-
+
+    "Chronas is a history project linking Wikipedia and Wikidata with a chronological and cartographical view."
+
+authors: <a href="https://twitter.com/Chronasorg">Dietmar Aumann</a>
+data: Wikipedia and Wikidata
+---
 title: Seealsology
 year: 2016
 date_added: 2016-03-26
