--- a/content.yaml
+++ b/content.yaml
@@ -7,6 +7,32 @@ page_subtitle: >
 ---
  # Each visualization should include a title, url, image, and description
 ---
+title: Geolinguistic Contrasts in Wikipedia
+url: http://lionelmichel.net/wikipedia/Geolinguistic_contrasts.html
+year: 2014
+date_added: 2017-06-04
+image: viz/geolang_sm.png
+description: >-
+
+    "In this project, I intended to explore knowledge diversity across
+    the different language versions of one and the same article on
+    Wikipedia."
+authors: <a href="http://www.lionelmichel.net/about-me.html">Lionel Michel</a>
+data: Wikipedia
+code: <a href="http://www.lionelmichel.net/posts/geolinguistic.html">concept</a>
+---
+title: Van Gogh in images on Wikipedia
+url: http://projects.datavis.club/van-gogh-in-images-on-wikipedia/
+year: 2017
+date_added: 2017-06-04
+image: viz/van_gogh_sm.png
+description: >-
+
+    "The visualization explores how different languages present Van Gogh's work and life by images."
+
+authors: <a href="https://twitter.com/laessr">Christian Laesser</a>
+data: Wikipedia, Wikimedia Commons
+---
 title: The Universe of Miles Davis
 year: 2016
 date_added: 2016-05-27
